Added Textcolor options and change cursor to pointer on mouseover

--- a/Source/src/partials/editor.html
+++ b/Source/src/partials/editor.html
@@ -45,7 +45,11 @@
             <spectrum-picker class="gf-form-input width-3" ng-model="ctrl.panel.color"></spectrum-picker>
         </div>
         <div class="gf-form">
-            <label class="gf-form-label width-12">First Timestamp Based On:</label>
+            <label class="gf-form-label width-10">Font Coler</label>
+            <spectrum-picker class="gf-form-input width-3" ng-model="ctrl.panel.textcolor"></spectrum-picker>
+        </div>
+        <div class="gf-form">
+            <label class="gf-form-label width-12">Font Size:</label>
             <select class="input-small gf-form-input width-10" ng-model="ctrl.panel.fontsize" ng-options="f for f in ctrl.textSizeOptions"></select>
         </div>
     </div>
